[package]
name = "rockman"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]

[dependencies]
serde = "1.0"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["unstable"] }
futures = "0.1"
error-chain = "0.11.0-rc.2"
tokio-core = "0.1"
serde_derive = "1.0"
term = "0.4"
clap = { version = "2.19", features = ["color"] }
flate2 = "0.2"
tar = "0.4"
